# tesserama

./: .gitignore  Cargo.toml  Makefile  NEWS.md  README.markdown  README.md  main.py  org.kiyuko.Tesserama.desktop.in  tesserama.desktop  tesserama.py
src/: application.rs  column.rs  lib.rs  liststore.rs  main.rs  simpleaction.rs  simpleactionstateful.rs  window.rs
