[package]
name = "tesserama"
version = "0.1.0"
authors = ["Andrea Bolognani <eof@kiyuko.org>"]

[dependencies.glib]
version = "0.1.3"
features = ["v2_48"]

[dependencies.gio]
version = "0.1.3"
features = ["v2_48"]

[dependencies.pango]
version = "0.1.3"
features = ["v1_38"]

[dependencies.gtk]
version = "0.1.3"
features = ["v3_20"]

[dependencies.csv]
version = "1.0.0-beta.4"
