[package]
name = "tesserama"
version = "0.1.0"
authors = ["Andrea Bolognani <eof@kiyuko.org>"]

[dependencies.glib]
version = "0.14.0"
features = ["v2_64"]

[dependencies.gio]
version = "0.14.0"
features = ["v2_64"]

[dependencies.pango]
version = "0.14.0"
features = ["v1_44"]

[dependencies.gtk]
version = "0.14.0"
features = ["v3_24"]

[dependencies.csv]
version = "1.1.6"

[dependencies.chrono]
version = "0.4.19"
